[package]
name = "resymo-agent"
version = "0.1.0-alpha.7"
edition = "2021"
license = "Apache-2.0"

description = "A remote system monitoring tool for a small set of servers"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
repository = "https://github.com/ctron/resymo"
categories = ["network-programming"]
keywords = ["monitoring", "network", "server"]
readme = "../README.md"

[dependencies]
actix-http = "3"
actix-service = "2"
actix-web = "4"
actix-web-extras = "0.1"
actix-web-httpauth = "0.8"
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env", "string"] }
env_logger = "0.11"
futures = "0.3"
gethostname = "0.4"
homeassistant-agent = { version = "=0.2.0-alpha.6", features = ["schemars"] }
humantime = "2"
humantime-serde = "1"
log = "0.4"
rumqttc = { version = "0.24", default-features = false, features = ["use-native-tls"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sysinfo = { version = "0.30", features = [] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"

actix-tls = { version = "3", optional = true, features = ["openssl"] }
openssl = { version = "0.10", optional = true, features = ["v111"] }

[features]
default = [
    "openssl"
]
vendored = [
    "openssl?/vendored"
]

openssl = [
    "dep:openssl",
    "actix-web/openssl",
    "actix-tls",
    "actix-tls/openssl"
]
