[package]
name = "resymo-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env", "string"] }
env_logger = "0.10"
futures = "0.3"
humantime = "2"
humantime-serde = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["full"] }

actix = "0.13"
actix-web = { version = "4", features = [] }
actix-web-extras = "0.1"
actix-web-httpauth = "0.8"
actix-web-actors = "4"

actix-tls = { version = "3", optional = true, features = ["openssl"] }
openssl = { version = "0.10", optional = true, features = ["v111"] }

ntex = { version = "0.7", features = ["tokio"] }
ntex-mqtt = "0.12"

resymo-common = { path = "../common", version = "0.1.0" }

[features]
default = [
    "openssl"
]

openssl = [
    "dep:openssl",
    "actix-web/openssl",
    "actix-tls",
    "actix-tls/openssl"
]
